# mindspore-neuroedge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/harmonyos/: README.md
app/harmonyos/arkts/: README.md
configs/: base.yaml  classical_ml.yaml  config.yaml  postprocess.yaml
configs/backends/: aws.yaml  local.yaml  modelarts.yaml
configs/data/: chbmit.yaml  siena.yaml  siena_sop10.yaml  siena_sop15.yaml  siena_sop5.yaml  tuh.yaml
configs/experiment/: ablation.yaml  baseline.yaml  dry_run.yaml  sop_ablation.yaml
configs/model/: autoformer.yaml  bilstm.yaml  cam_cnn_bilstm.yaml  cnn_baseline.yaml  cnn_bilstm.yaml  cnn_bilstm_attn.yaml  cnn_informer.yaml  eegformer.yaml  ghostnet1d.yaml  lstm.yaml  mobilenetv3_1d.yaml  mobilevit1d.yaml  mobilevit_1d.yaml  pyramidal_cnn_bilstm.yaml  resnet1d.yaml  ultralight_cnn.yaml
configs/optuna/: search.yaml
configs/train/: default.yaml
configs/training/: cnn_informer.yaml  conv_snn.yaml  default.yaml  dry_run.yaml  eegformer.yaml  lightweight.yaml  modelarts.yaml
data/: README.md
docs/: architecture.md  data-governance.md  execution-plan.md  experiment-matrix.md
experiments/: README.md
exports/example/: README.md  ultralight_cnn.ms
infra/ci/: README.md
infra/modelarts/: README.md
notebooks/: eda_siena.ipynb
scripts/: download_siena.py  dry_run.sh  evaluate_model.sh  export_lite.py  export_lite.sh  merge_sop_datasets.py  prepare_all_sop.sh  prepare_dataset.py  run_classical_baselines.py  run_experiment.py  run_experiment.sh  setup_env.sh  upload_and_verify.py  upload_obs.py
src/auras/: __init__.py
src/auras/data/: __init__.py  augmentations.py  channels.py  dataset.py  labeling.py  loaders.py  preprocess.py
src/auras/data/parsers/: __init__.py  chbmit.py  siena.py  tuh.py
src/auras/deployment/: __init__.py  benchmark.py  converter.py  export_ms.py  quantize.py  quantizer.py
src/auras/experiment/: __init__.py  cross_validation.py  optuna_search.py  runner.py
src/auras/inference/: __init__.py  postprocess.py  sliding_window.py
src/auras/launchers/: __init__.py  aws.py  base.py  local.py  modelarts.py
src/auras/models/: __init__.py  autoformer.py  base.py  bilstm.py  cam_cnn_bilstm.py  classical_ml.py  cnn_baseline.py  cnn_bilstm.py  cnn_bilstm_attn.py  cnn_informer.py  eegformer.py  factory.py  ghostnet1d.py  lstm.py  mobilenet1d.py  mobilenetv3_1d.py  mobilevit1d.py  mobilevit_1d.py  modules.py  pyramidal_cnn_bilstm.py  resnet1d.py  ultralight_cnn.py
src/auras/monitoring/: __init__.py  base_logger.py  modelarts_logger.py  wandb_logger.py
src/auras/training/: __init__.py  callbacks.py  evaluator.py  losses.py  lr_schedulers.py  metrics.py  sampler.py  train.py  trainer.py
src/auras/utils/: __init__.py  config.py  io.py  reproducibility.py
tests/: test_sprint1_data_foundation.py  test_sprint2_architectures.py  test_sprint3_training.py  test_sprint4_classical_ml.py
tests/integration/: test_pipeline_smoke.py
tests/test_data/: test_channels.py  test_dataset.py  test_preprocess.py
tests/test_models/: test_factory.py
tests/test_training/: test_metrics.py
tests/unit/: test_metrics.py
